# ECCC-IMWEBs-Viewer

./: .dockerignore  .env  .gitattributes  .gitignore  AutoUpdate.ps1  Dockerfile  Makefile  MoveToIIS.ps1  Privacy Policy Document.docx  README.md  Technical Report.docx  app.py  convert-package.js  index.html  main.js  package-lock.json  package.json  package.json5  preload.js  requirements.txt  sync-version.js  tailwind.config.js  vite.config.js
.github/workflows/: main.yml  test.yml
backend/: app.py  apppy.py  apppy.spec  config.py  environment.yml  error_handlers.py  requirements-win.txt  requirements.txt  routes.py  services.py  services.test.py  validate.py
backend/dataExport/: exported_data.csv
dataExport/: exported_data.csv
electron/: main.js  preload.js
lookup/: BMP_export.csv  Hydroclimate_export.csv  lookup.py  scenario_2_export.csv
public/: web.config
src/: App.vue  main.js
src-tauri/: Cargo.toml  main.js  move.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: pages.css
src/components/: AggregationMethod.vue  Calculator.vue  ColumnDropdown.vue  DatabaseDropdown.vue  ExportConfig.vue  ExportDropdown.vue  ExportTableStats.vue  FolderTree.vue  GraphDisplay.vue  IntervalDropdown.vue  MessageBox.vue  Selection.vue  StatisticsDropdown.vue  TableDropdown.vue  TableStatsDisplay.vue
src/pages/: Graph.vue  Help.vue  Login.vue  Map.vue  Project.vue
src/public/: web.config
src/router/: index.js
src/store/: index.js
src/utils/: componentImports.js
