[package]
name = "app"
version = "0.2.0"
description = "IMWEBs viewer"
authors = ["Viransh Shah"]
license = "MIT"
repository = "https://github.com/shahviransh/ECCC-IMWEBs-Viewer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.2", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2.0.1"
reqwest = "0.11"
